<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/background_color"
    android:paddingTop="76dp"
    android:paddingBottom="68dp">

    <!-- Title TextView -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stay_hydrated"
        android:textColor="@color/primary_text_color"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center" />

    <!-- Subtitle TextView -->
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/stay_healthy"
        android:textColor="@color/primary_text_color"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center" />

    <!-- Body TextView -->
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/drink_water_for_a_happy_body"
        android:textColor="@color/primary_text_color"
        android:textSize="18sp"
        android:gravity="center" />

    <!-- Water Glass Image -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/glass_of_water"
        android:contentDescription="@string/glass_of_water_description"
        android:layout_marginTop="48dp" />

    <!-- Button: Splash Button -->
    <Button
        android:id="@+id/button1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/rounded_button"
        android:text="@string/button_text"
        android:textColor="@color/primary_text_color"
        android:textSize="20sp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp" />

</LinearLayout>
