<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_color"
    android:gravity="center_horizontal"
    android:padding="24dp">

    <!-- Title TextViews -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/water_bottle_title"
        android:textColor="@color/primary_text_color"
        android:textSize="26sp"
        android:textStyle="bold" />

    <!-- Title TextViews -->
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/water_bottle"
        android:textColor="@color/primary_text_color"
        android:textSize="23sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/everyday_text"
        android:textColor="@color/primary_text_color"
        android:textSize="30sp"
        android:textStyle="bold" />

    <!-- Water Bottle Image -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="301dp"
        android:layout_height="320dp"
        android:layout_marginTop="32dp"
        android:scaleType="centerInside"
        android:src="@drawable/bottles" />

    <!-- Next Button -->
    <Button
        android:id="@+id/button2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/rounded_button"
        android:text="@string/button_text"
        android:textColor="@color/primary_text_color"
        android:textSize="20sp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp" />

</LinearLayout>
