<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/background_color"
    android:padding="24dp">

    <!-- Title Text -->
    <TextView
        android:id="@+id/wakeup_time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wakeup_title"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/primary_text_color"
        android:layout_marginBottom="24dp"
        android:gravity="center" />

    <!-- Shield Icon -->
    <ImageView
        android:id="@+id/wakeup"
        android:layout_width="288dp"
        android:layout_height="296dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/wakeup_title"
        android:src="@drawable/wakeup" />

    <!-- TextClock (Optional) -->

    <!-- TextView to display the selected wakeup time -->
    <TextView
        android:id="@+id/wake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wake_time"
        android:textSize="22sp"
        android:textColor="@color/primary_text_color"
        android:layout_marginTop="16dp" />

    <!-- Button to select wakeup time -->
    <Button
        android:id="@+id/select_wakeup_time_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_time"
        android:background="@drawable/rounded_button"
        android:textColor="@color/primary_text_color"
        android:layout_marginTop="16dp" />

    <!-- Next Button -->
    <Button
        android:id="@+id/buttonwakeup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="32dp"
        android:background="@drawable/rounded_button"
        android:text="@string/button_text"
        android:textColor="@color/primary_text_color"
        android:textSize="20sp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp" />
</LinearLayout>
