<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_color"
    android:padding="16dp">

    <!-- First Row -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/alarm" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/remind_text"
            android:textColor="@color/primary_text_color"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- Second Row -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="40dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/meter"
            android:layout_marginEnd="16dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/watch_signs_text"
                android:textColor="@color/primary_text_color"
                android:textSize="24sp"
                android:textStyle="bold"/>

        </LinearLayout>
    </LinearLayout>

    <!-- Third Row -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="40dp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/todo"
            android:layout_marginEnd="16dp"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_goals_text"
            android:textColor="@color/primary_text_color"
            android:textSize="24sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <!-- Next Button -->
    <Button
        android:id="@+id/button3"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="32dp"
        android:background="@drawable/rounded_button"
        android:text="@string/button_text"
        android:textColor="@color/primary_text_color"
        android:textSize="20sp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp" />

</LinearLayout>
