<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <!-- Title Text -->
    <TextView
        android:id="@+id/water_reminder_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/water_reminder_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        android:textColor="@color/primary_text_color"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal" />

    <!-- Reminder Container -->
    <LinearLayout
        android:id="@+id/reminder_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/water_reminder_title">

        <!-- Reminder Text -->
        <TextView
            android:id="@+id/reminder_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:text="@string/reminder_text"
            android:textStyle="bold"
            android:fontFamily="sans-serif-condensed-light"
            android:textColor="@color/primary_text_color"
            android:textSize="18sp" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:progressDrawable="@drawable/progress_bar_style"
            android:progress="50"
            android:max="100"
            android:minHeight="40dp"
            android:maxHeight="50dp"
            android:indeterminateOnly="false" />

        <!-- Image for Water Glass (Clickable to Increment Progress) -->
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:focusable="true"
            app:srcCompat="@drawable/waterglass" />

    </LinearLayout>

    <!-- Bottom Container with Progress Information and History -->
    <LinearLayout
        android:id="@+id/bottom_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/reminder_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:padding="16dp"/>

    <!-- Bottom Navigation Buttons -->
    <LinearLayout
        android:id="@+id/bottom_navigation"
        android:layout_width="426dp"
        android:layout_height="105dp"
        android:layout_marginTop="28dp"
        android:background="@color/button_background_color"
        android:orientation="horizontal"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottom_container">

        <Button
            android:id="@+id/button_clock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rounded_button"
            android:paddingStart="30dp"
            android:paddingLeft="40dp"
            android:paddingEnd="30dp"
            android:text="@string/button_clock"
            android:textColor="@color/primary_text_color"
            android:textSize="17sp" />


        <!-- Clock Button -->

        <!-- Settings/History Button -->
        <Button
            android:id="@+id/todo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rounded_button"
            android:paddingStart="34dp"
            android:paddingLeft="40dp"
            android:paddingEnd="34dp"
            android:text="@string/button_Todo"
            android:textColor="@color/primary_text_color"
            android:textSize="17sp" />

        <Button
            android:id="@+id/button_hydration_reminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:paddingStart="24dp"
            android:paddingLeft="40dp"
            android:paddingEnd="24dp"
            android:text="@string/timer"
            android:textColor="@color/primary_text_color"
            android:textSize="17sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
